Some final changes for creation to work